--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Demo Scenes"]
 	path = Demo Scenes
 	url = git@github.com:ninlilizi/Nigiri-DemoScenes.git
+[submodule "Resources/Textures"]
+	path = Resources/Textures
+	url = https://github.com/ninlilizi/Nigiri-TextureResources
