Debug object for runtime output of human readable octree
Also namespace changes to unify code structure between assemblies.

--- a/Tests/PlayMode/NKLI.Tests.PlayMode.Nigiri.asmdef
+++ b/Tests/PlayMode/NKLI.Tests.PlayMode.Nigiri.asmdef
@@ -1,14 +1,12 @@
 {
-    "name": "NKLI.Nigiri.Tests.EditMode",
+    "name": "NKLI.Tests.PlayMode.Nigiri",
     "references": [
         "NKLI.Nigiri"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
